<resources>
    <string name="app_name">Ssessments</string>


    <string name="logo">Logo</string>

    <!-- navigation drawer -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="my_account">My Account</string>
    <string name="notifications">Notifications</string>

    <!-- toast and snackbar messages-->
    <string name="nointernet" translatable="false">No Internet</string>
    <string name="loggedin" translatable="false">You Are Logged In!</string>
    <string name="network_error">Something went wrong!</string>
    <string name="enter_email_text">Enter your e-mail address</string>

    <!-- search interface-->
    <string name="app_label">Ssessments</string>
    <string name="search_hint">Search News</string>

    <!-- log in and registrtion messages in text fields-->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>

    <!-- chips-->
    <string name="chip_allmarkets">All Markets</string>
    <string name="chip_allproducts">All Products</string>
    <string name="chip_allservices">All Services</string>

    <string name="chip_31">SEA</string>
    <string name="chip_32">China</string>
    <string name="chip_33">Indonesia</string>
    <string name="chip_34">Malaysia</string>
    <string name="chip_35">Vietnam</string>
    <string name="chip_36">India</string>

    <string name="chip_1">PE</string>
    <string name="chip_2">PP</string>
    <string name="chip_3">PVC</string>
    <string name="chip_4">PET</string>
    <string name="chip_5">Styrenics</string>

    <string name="chip_11">Daily</string>
    <string name="chip_12">Weekly</string>
    <string name="chip_13">Monthly</string>
    <string name="chip_14">Quarterly</string>
    <string name="chip_15">News</string>
    <string name="chip_16">Price</string>
    <string name="chip_17">Stats</string>
    <string name="chip_18">Plant</string>

    <string name="apply_filter">APPLY</string>
    <string name="reset_filter">RESET</string>
    <string name="cancel_filter">CANCEL</string>
    <string name="save_filter">SAVE</string>

    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="search_filter">Search filter</string>
    <string name="region">Region</string>
    <string name="product">Product</string>
    <string name="ssessment">Ssessment</string>
    <string name="quick_filter">Quick search</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="Settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="markets_title">Markets</string>
    <string name="select_from_to_datepicker_title">Select</string>
    <string name="from_date_picker_title">From</string>
    <string name="date_range_date_picker_title">Date Range</string>
    <string name="to_date_picker_title">To</string>

    <string name="turnOffNotification">Stop Receiving Notifications For This Item?</string>
    <string name="choose_font_size">Choose Font Size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_extra_large">Extra Large</string>
    <string name="channel_name">News Notifications</string>
    <string name="channel_description">Receive Notifications For News Updates</string>

    <string name="forgot_password_handled">Info will be sent to your e-mail</string>
    <string name="registration_sent">Thank you! Confirmation will be sent to your e-mail</string>


    <!-- spinner regions-->
    <string-array name="spinner_regions">
        <item>All</item>
        <item>North East Asia</item>
        <item>China</item>
        <item>South East Asia</item>
        <item>Indonesia</item>
        <item>Vietnam</item>
        <item>Malaysa</item>
        <item>Australia</item>
        <item>India</item>
    </string-array>

    <string-array name="font_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="font_size_value">
        <item>0.85</item>
        <item>1</item>
        <item>1.15</item>
        <item>1.3</item>
    </string-array>

    <!-- spinner products-->
    <string-array name="spinner_products">
        <item>All</item>
        <item>PE</item>
        <item>PP</item>
        <item>PVC</item>
        <item>PET</item>
        <item>PS</item>
    </string-array>
    <!-- spinner ssessments-->
    <string-array name="spinner_ssessments">
        <item>All</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>News</item>
        <item>Price</item>
    </string-array>

    <!-- spinner language-->
    <string-array name="spinner_language">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Bahasa Indonesia</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ssessments_linkedin">Ssessments LinkedIn</string>
    <string name="authfailed">Authentification failed!</string>
    <string name="WrongPasswordorUsername">Wrong Password or Username</string>
    <string name="ssessments_facebook">Ssessments Facebook</string>


    <string name="markets_preferences">markets_preferences</string>
    <string name="products_preferences">products_preferences</string>
    <string name="services_preferences">services_preferences</string>
    <string name="custom">Custom</string>
    <string name="saved">Saved</string>
    <string name="predefined">Predefined</string>
    <string name="filters_title">Filters</string>
    <string name="my_account_menu_title">My Account</string>
    <string name="filter_news_according_to_notifications">Filter News According To Notifications</string>
    <string name="all_products">All Products</string>

    <string-array name="multi_list_Asia_pacific">
        <item>Australia</item>
        <item>Indonesia</item>
        <item>Corea</item>
        <item>Australia2</item>
        <item>Indonesia2</item>
        <item>Corea2</item>
        <item>Australia3</item>
        <item>Indonesia3</item>
        <item>Corea3</item>
        <item>Australia22</item>
        <item>Indonesia22</item>
        <item>Corea22</item>
    </string-array>


    <string-array name="multi_list_Asia_pacific_deafult">
        <item>Australia</item>
        <item>Indonesia</item>
        <item>Corea</item>

    </string-array>


</resources>
