<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
>


    <TextView
            android:text="@string/choose_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/fonsizeTitle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"/>

    <View
            android:id="@+id/divider7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/fonsizeTitle"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <RadioGroup
            android:id="@+id/fontsizeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/divider7"
            app:layout_constraintStart_toStartOf="@+id/fonsizeTitle"
            android:orientation="vertical" android:divider="?attr/dividerHorizontal"
            app:layout_constraintBottom_toBottomOf="parent">
        <RadioButton
                android:text="@string/font_size_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonSmall"
                android:layout_weight="1"
                android:layout_marginTop="8dp"/>
        <RadioButton
                android:text="@string/font_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMedium"
                android:checked="true"
                android:layout_marginTop="8dp"
        />
        <RadioButton
                android:text="@string/font_size_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonLarge"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
        />
        <RadioButton
                android:text="@string/font_size_extra_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonExtra" android:layout_weight="1"
                android:layout_marginTop="8dp"
        />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>